--- a/Resturent/index.html
+++ b/Resturent/index.html
@@ -396,6 +396,10 @@
                     <label for="signup-address">Full Address</label>
                     <input type="text" id="signup-address" required>
                 </div>
+                <div class="input-group">
+                    <label for="signup-imageUrl">Restaurant Image URL</label>
+                    <input type="url" id="signup-imageUrl" placeholder="https://example.com/main_image.jpg" required>
+                </div>
                 <button type="submit">Sign Up</button>
                 <div class="toggle-form">
                     Already a partner? <a id="show-login">Login</a>
@@ -485,6 +489,10 @@
                              <div class="input-group">
                                 <label for="profile-hours">Operating Hours</label>
                                 <input type="text" id="profile-hours" placeholder="e.g., 9:00 AM - 10:00 PM">
+                            </div>
+                            <div class="input-group">
+                                <label for="profile-imageUrl">Restaurant Image URL</label>
+                                <input type="url" id="profile-imageUrl" placeholder="https://example.com/main_image.jpg">
                             </div>
                             <button type="submit" class="btn">Save Profile</button>
                         </form>
@@ -587,12 +595,13 @@
                 const password = document.getElementById('signup-password').value;
                 const cuisine = document.getElementById('signup-cuisine').value;
                 const address = document.getElementById('signup-address').value;
+                const imageUrl = document.getElementById('signup-imageUrl').value;
                 
                 auth.createUserWithEmailAndPassword(email, password)
                     .then(userCredential => {
                         const user = userCredential.user;
                         db.ref('restaurants/' + user.uid).set({
-                            name, email, cuisine, address,
+                            name, email, cuisine, address, imageUrl,
                             approved: false // Admin must approve
                         });
                     })
@@ -672,7 +681,6 @@
                         const orderId = childSnapshot.key;
                         const order = childSnapshot.val();
                         
-                        // Only show orders that need action
                         if (order.status !== 'DELIVERED' && order.status !== 'CANCELLED' && order.status !== 'REJECTED') {
                              renderOrderCard(ordersContainer, orderId, order);
                         }
@@ -811,6 +819,7 @@
                          document.getElementById('profile-cuisine').value = data.cuisine || '';
                          document.getElementById('profile-contact').value = data.contact || '';
                          document.getElementById('profile-hours').value = data.hours || '';
+                         document.getElementById('profile-imageUrl').value = data.imageUrl || '';
                      }
                  });
             }
@@ -822,7 +831,8 @@
                     address: document.getElementById('profile-address').value,
                     cuisine: document.getElementById('profile-cuisine').value,
                     contact: document.getElementById('profile-contact').value,
-                    hours: document.getElementById('profile-hours').value
+                    hours: document.getElementById('profile-hours').value,
+                    imageUrl: document.getElementById('profile-imageUrl').value
                 };
                 db.ref('restaurants/' + currentUser.uid).update(profileData).then(() => alert('Profile updated!'));
             });
