--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Food Web</title>
     <link rel="icon" type="image/x-icon" href="index.jpg">
     <link rel="shortcut icon" href="index.jpg" type="image/x-icon">
-    
+    <link rel="apple-touch-icon" sizes="180x180" href="index.jpg">
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
