--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Web</title>
-    <link rel="icon" type="image/x-icon" href="index.jpg">
-    <link rel="shortcut icon" href="index.jpg" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="index.jpg">
+
+<!-- Favicon -->
+<link rel="icon" href="/index.jpg" type="image/x-icon">
+
+<!-- PNG Icons (for Android/Chrome) -->
+<link rel="icon" type="image/png" sizes="192x192" href="/index.jpg">
+<link rel="icon" type="image/png" sizes="512x512" href="/index.jpg">
+
+<!-- Apple Touch Icon (for iOS Safari) -->
+<link rel="apple-touch-icon" href="/index.jpg">
+
+    
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-database.js"></script>
