--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
 <!-- Apple Touch Icon (for iOS Safari) -->
 <link rel="apple-touch-icon" href="/index.jpg">
 
+    <link rel="manifest" href="/manifest.json">
+<meta name="theme-color" content="#000000">
+
     
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/8.10.1/firebase-auth.js"></script>
